# Agente-Final-Universidad

./: .env.example  CLOUD_DEPLOY.md  DEPLOY.md  docker-compose.yml  render.yaml
api/: .gitignore  Dockerfile  EMAIL_SETUP.md  README.md  alembic.ini  auth.py  database.py  main.py  pyproject.toml  render.yaml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 36738419b3c4_add_unit_cost_to_product_model.py
api/models/: api_models.py  database_models.py
api/routers/: analytics_router.py  auth_router.py  chat_router.py  inventory_router.py  sales_router.py
api/scripts/: lint.py
api/services/: chat_orchestrator.py  chat_service.py  database_service.py  email_agent.py  intent_classifier.py  inventory_agent.py  product_agent.py  sales_agent.py
api/src/: __init__.py  utils.py
api/src/agents/: __init__.py  base_agent.py  sales_agent.py
api/src/models/: __init__.py  base.py  inventory.py  sales.py
api/src/tools/: __init__.py  gemini_tool.py  visualization_tool.py
api/utils/: email_utils.py  initialization.py
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/components/: AnalysisDisplay.tsx  ChartDisplay.tsx  ChatInterface.tsx  CreateProductModal.tsx  CreateSaleModal.tsx  EditInventoryModal.tsx  MessageItem.tsx  QuickActions.tsx  index.ts
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/ui/: AnimatedBackground.tsx  GlassCard.tsx  PremiumButton.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: chat.ts
